fix: 정적메서드 사용, biddingtime에서 creatAt 이름 변경